# hubris

./: Cargo.toml
app/pipit-app/: Cargo.toml  app.toml
app/pipit-app/src/: main.rs
chips/stm32f4/: chip.toml
task/pipit-main/: Cargo.toml
task/pipit-main/src/: main.rs
task/pipit-matrix-scanner/: Cargo.toml
task/pipit-matrix-scanner/src/: main.rs
