[package]
name = "task-pipit-main"
version = "0.1.0"
edition = "2018"

[features]
panic-messages = ["userlib/panic-messages"]

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
userlib = {path = "../../sys/userlib"}
drv-user-leds-api = {path = "../../drv/user-leds-api"}

[[bin]]
name = "task-pipit-main"
test = false
bench = false
